// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card is rendered 1`] = `
.emotion-7 {
  margin: 1rem;
}

.emotion-8 {
  border-radius: 0.25rem;
  background-color: white;
}

.emotion-0 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  width: 100%;
  height: 12rem;
  object-fit: cover;
}

.emotion-2 {
  font-size: 1.25rem;
  line-height: 1.4;
  margin-bottom: 0.75rem;
}

.emotion-1 {
  color: maroon;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  display: inline-block;
  margin-left: 1.4em;
  text-indent: -1.4em;
}

<div
  class="emotion-8"
>
  <a
    href="https://example.com"
    rel="nofollow"
  >
    <img
      src="https://url_to_img"
      alt="Little Big Burger"
      class="emotion-0"
    />
  </a>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <a
        href="https://example.com"
        rel="nofollow"
        class="emotion-1"
      >
        Little Big Burger
      </a>
    </div>
    <p>
      100.00
    </p>
    <address>
      <div>
        <span
          class="emotion-4"
        >
          <span
            role="img"
            aria-label="round pushpin"
          >
            📍
          </span>
          <a
            href="https://url_to_map"
            class="emotion-1"
          >
            123 Main Street
          </a>
        </span>
      </div>
      <div>
        <span
          class="emotion-4"
        >
          <span
            role="img"
            aria-label="phone receiver"
          >
            📞
          </span>
          <a
            href="tel:503-543-2345"
            class="emotion-1"
          >
            503-543-2345
          </a>
        </span>
      </div>
    </address>
  </div>
</div>
`;

exports[`Card w/o phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -46,27 +46,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1kozala\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-            
-           <a
-             class=\\"css-8s3g3u\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price and phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -23,13 +23,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p>
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1kozala\\"
          >
@@ -46,27 +43,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1kozala\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-            
-           <a
-             class=\\"css-8s3g3u\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -23,13 +23,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p>
-       100.00
-     </p>
      <address>
        <div>
          <span
            class=\\"css-1kozala\\"
          >"
`;
